--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Академия HTML</title>
+    <title>Iwan</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
     <main>
       <a href="https://htmlacademy.ru">
-        <img src="img/bane.svg" width="300" height="300" alt="HTML Academy">
+        <img src="img/bane.svg" width="500" height="500" alt="HTML Academy">
       </a>
 
-      <h1>Академия HTML</h1>
+      <h1>Iwan</h1>
 
       <p>
         <a href="https://github.com/htmlacademy/htmlacademy.github.io">github.com/htmlacademy/htmlacademy.github.io</a>
