--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Iwan</title>
+    <title>Feodosiy</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -12,10 +12,10 @@
         <img src="img/bane.svg" width="500" height="500" alt="HTML Academy">
       </a>
 
-      <h1>Iwan</h1>
+      <h1>Feodosiy</h1>
 
       <p>
-        <a href="https://github.com/htmlacademy/htmlacademy.github.io">github.com/htmlacademy/htmlacademy.github.io</a>
+        <a href="history_quest/index.html"> Добро пожаловать в игру!</a>
       </p>
     </main>
 
