--- a/history_quest/index.html
+++ b/history_quest/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Game Ower</h1>
+    <h1>Mission Complete</h1>
    <img src="https://media.giphy.com/media/x2woMnCz4W0Vy/giphy.gif">
 </body>
 </html>
