--- a/history_quest/index.html
+++ b/history_quest/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Mission Complete</h1>
    <img src="https://media.giphy.com/media/x2woMnCz4W0Vy/giphy.gif">
+   <audio src="mp3/mario_1.mp3" autoplay>
 </body>
 </html>
