--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Feodosiy</h1>
 
       <p>
-        <a href="history_quest/index.html"> Добро пожаловать в игру!</a>
+        <a href="history_quest/game.html"> Добро пожаловать в игру!</a>
       </p>
     </main>
 
