--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Feodosiy</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index_style.css">
   </head>
   <body>
-
     <main>
-      <a href="https://htmlacademy.ru">
-        <img src="img/bane.svg" width="500" height="500" alt="HTML Academy">
-      </a>
+      <img src="img/bane.svg" width="500" height="500" alt="HTML Academy">
 
       <h1>Feodosiy</h1>
 
       <p>
         <a href="history_quest/game.html"> Добро пожаловать в игру!</a>
+        <a href="history_quest/end_game_1.html"> 1</a>
+        <a href="history_quest/end_game_2.html"> 2</a>
+        <a href="history_quest/end_game_3.html"> 3</a>
       </p>
     </main>
 
