--- a/bootstrap_grid/bootstrap.html
+++ b/bootstrap_grid/bootstrap.html
@@ -17,21 +17,45 @@
 
     <div class="row nav c1">
         <div class="col">
-            <div class="c5  my-btn">Фильмы</div>
+            <div class="my-btn">Фильмы</div>
         </div>
         <div class="col">
 
-            <div class="c5  my-btn">О нас</div>
+            <div class="my-btn">О нас</div>
         </div>
         <div class="col">
-            <div class="c5  my-btn">Контакты</div>
+            <div class="my-btn">Контакты</div>
         </div>
     </div>
     <div class="row article c2">
-
-        <div class="col">
-            <h1>Slava KPSS</h1>
-            <div class="c2">2</div>
+        <div class="col-10 align-self-center card">
+            <!-- <h1>Slava KPSS</h1>
+            <div class="c2">2</div> -->
+            <div class="row c4">
+                <div class="col-4 poster">
+                    <img src="../img/1024px-Comintern_Logo.svg_-e1562703515564.png" alt="">
+                </div>
+                <div class="col">
+                    <div class="row">
+                        <div class="col">A</div>
+                    </div>
+                    <div class="row">
+                        <div class="col">A</div>
+                    </div>
+                    <div class="row">
+                        <div class="col">A</div>
+                    </div>
+                    <div class="row">
+                        <div class="col">A</div>
+                    </div>
+                    <div class="row">
+                        <div class="col">A</div>
+                    </div>
+                </div>
+            </div>
+            <div class="row c5">
+                <div class="col dis">discription</div>
+            </div>
         </div>
     </div>
     <div class="row footer c3">
