--- a/bootstrap_grid/bootstrap.html
+++ b/bootstrap_grid/bootstrap.html
@@ -32,10 +32,10 @@
             <!-- <h1>Slava KPSS</h1>
             <div class="c2">2</div> -->
             <div class="row c4">
-                <div class="col-4 poster">
-                    <img src="../img/1024px-Comintern_Logo.svg_-e1562703515564.png" alt="">
+                <div class="col-12 col-md-4 poster">
+                    <img class="img-fluid" src="../img/1024px-Comintern_Logo.svg_-e1562703515564.png" alt="">
                 </div>
-                <div class="col">
+                <div class="col-12 col-md-8">
                     <div class="row">
                         <div class="col">A</div>
                     </div>
