--- a/bootstrap_grid/bootstrap.html
+++ b/bootstrap_grid/bootstrap.html
@@ -2,11 +2,18 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style_boooot.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -16,18 +23,21 @@
 <body>
 
     <div class="row nav c1">
-        <div class="col">
+        <div class="col-12 col-md-4">
             <div class="my-btn">Фильмы</div>
         </div>
-        <div class="col">
+        <div class="col-12 col-md-4">
 
             <div class="my-btn">О нас</div>
         </div>
-        <div class="col">
+        <div class="col-12 col-md-4">
             <div class="my-btn">Контакты</div>
         </div>
     </div>
-    <div class="row article c2">
+    <div class="row align-items-center article c2">
+        <div class="col-1">
+
+        </div>
         <div class="col-10 align-self-center card">
             <!-- <h1>Slava KPSS</h1>
             <div class="c2">2</div> -->
@@ -36,32 +46,63 @@
                     <img class="img-fluid" src="../img/1024px-Comintern_Logo.svg_-e1562703515564.png" alt="">
                 </div>
                 <div class="col-12 col-md-8">
-                    <div class="row">
-                        <div class="col">A</div>
+                    <div class="row align-items-center">
+                        <div class="col-4 align-self-center">Tested:</div>
+                        <div class="col-8">30/10/1961</div>
+                        <div class="col-4 align-self-center">Name:</div>
+                        <div class="col-8">Tsar-Bomba</div>
+                        <div class="col-4 align-self-center">Variant:</div>
+                        <div class="col-8">A620EN</div>
+                        <div class="col-4 align-self-center">Weight:</div>
+                        <div class="col-8">26,500 kg</div>
+                        <div class="col-4 align-self-center">The power of exploding:</div>
+                        <div class="col-8">58,6 megatons of TNT</div>
                     </div>
-                    <div class="row">
-                        <div class="col">A</div>
-                    </div>
-                    <div class="row">
-                        <div class="col">A</div>
-                    </div>
-                    <div class="row">
-                        <div class="col">A</div>
-                    </div>
-                    <div class="row">
-                        <div class="col">A</div>
-                    </div>
+
                 </div>
             </div>
             <div class="row c5">
-                <div class="col dis">discription</div>
+                <div class="col dis">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras porttitor urna non
+                    tortor euismod, in ultricies turpis euismod. Fusce lacinia turpis erat, vitae rutrum quam luctus at.
+                    Curabitur placerat massa ut sollicitudin pretium. Aliquam erat volutpat. Etiam vitae nulla varius,
+                    pellentesque ante id, aliquam odio. Morbi vulputate a est nec sodales. Morbi eu egestas ante, vitae
+                    accumsan tellus. Aenean consectetur urna maximus lacus molestie dapibus.
+
+                    Etiam cursus dolor vitae orci gravida gravida. Nam quis faucibus nibh, quis ullamcorper ligula. Ut
+                    nec sapien faucibus, accumsan leo eu, consectetur nulla. Suspendisse consequat diam diam, sed
+                    vestibulum mi aliquet vel. Aliquam in mattis nulla. In vestibulum, sem ac posuere vehicula, risus
+                    mauris suscipit sapien, eget consectetur justo dolor in purus. Sed in scelerisque orci. Praesent a
+                    pharetra justo.
+
+                    Proin porta non est ac mattis. Quisque fermentum erat nec tristique ultricies. Donec ornare, felis
+                    vitae accumsan lacinia, mi tortor aliquam enim, in vulputate justo justo sed tortor. Cras metus
+                    velit, convallis a dolor et, feugiat pharetra massa. Suspendisse ut consectetur velit. Curabitur
+                    volutpat lacus tincidunt cursus ullamcorper. Vivamus malesuada id enim eget mollis. Nunc elementum
+                    risus turpis, sit amet vulputate mi placerat ut. Integer purus tortor, maximus eget nunc a, auctor
+                    fringilla nisi.
+
+                    Nulla pharetra odio ac pretium accumsan. Curabitur eu aliquet ante. Fusce consectetur ex ac ornare
+                    pellentesque. Nulla vitae ligula a sem facilisis condimentum. Nulla fringilla fringilla tellus non
+                    iaculis. Suspendisse felis massa, venenatis non odio blandit, rutrum interdum tortor. Donec
+                    lobortis, arcu vel dapibus tincidunt, eros felis condimentum eros, a tempus turpis orci et tortor.
+                    Proin semper quis nisl sed dignissim. Duis euismod odio ac sagittis gravida.
+
+                    Integer id eros pharetra mi placerat bibendum quis at enim. Cras dictum, mauris quis scelerisque
+                    ultrices, mauris ante volutpat nibh, quis congue mauris magna ac mauris. Integer suscipit elit
+                    finibus posuere egestas. Mauris dignissim sem a facilisis feugiat. Nulla cursus consectetur elit a
+                    convallis. Phasellus fermentum urna non ligula rutrum posuere. Curabitur ut mauris sit amet est
+                    feugiat aliquet eget mollis nisi. Morbi convallis lobortis pulvinar. Cras quis sodales turpis, vel
+                    tempus urna. Aenean ut est metus. Sed placerat est fringilla imperdiet suscipit. Nulla eu ipsum eget
+                    neque eleifend ultricies non ac enim. Duis pretium scelerisque rhoncus. Sed augue lectus, varius id
+                    ultrices in, ultricies non orci. Donec quis nisl dignissim, malesuada arcu eget, tincidunt tellus.
+                    Aliquam accumsan posuere ullamcorper.</div>
             </div>
         </div>
     </div>
     <div class="row footer c3">
         <div class="col">
             <!-- <div class="c3">3</div> -->
-            <h3>Все права защищены</h3>
+            <h3>Все права защищены коммунизмом</h3>
         </div>
     </div>
 
