--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <a href="history_quest/end_game_1.html"> 1</a>
         <a href="history_quest/end_game_2.html"> 2</a>
         <a href="history_quest/end_game_3.html"> 3</a>
-        <br>
+        <br><br><br>
 
-        <a href="bootstrap_grid/bootstrap.html">Project USSR</a>
+        <a class="Color_of_the_USSR" href="bootstrap_grid/bootstrap.html">Project USSR</a>
 
       </p>
     </main>
