--- a/history_quest/game.html
+++ b/history_quest/game.html
@@ -7,9 +7,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
 
     <link rel="stylesheet" href='..//css/game_style.css'>
     <link rel="stylesheet" href="..//css/paralax.css">
+    <script src="database.js"></script>
     <script src="check.js"></script>
 
     <meta charset="UTF-8">
@@ -30,101 +32,15 @@
                 </span>
                 <br>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-sm-12 col-lg-6">
                     <p id="q1">1) В каком году пришел к власти Сталин? </p>
                 </div>
                 <div class="col-sm-12 col-lg-6">
                     <input type="text" name="a1" id="a1">
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-lg-6">
-                    <p id="q2">2) В каком году было нападение на Перл-Харбор? </p>
-                </div>
-                <div class="col-sm-12 col-lg-6">
-                    <input type="text" name="a2" id="a2">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-12 col-lg-6">
-                    <p id="q3">3) В каком году была Сталинградская битва? </p>
-                </div>
-                <div class="col-sm-12 col-lg-6">
-                    <input type="text" name="a3" id="a3">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-12 col-lg-6">
-                    <p id="q4">4) Сколько длилась блокада Ленинграда? </p>
-                </div>
-                <div class="col-sm-12 col-lg-6">
-                    <input type="text" name="a4" id="a4">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-12 col-lg-6">
-                    <p id="q5">5) Кто сконструировал Т-34? </p>
-                </div>
-                <div class="col-sm-12 col-lg-6">
-                    <input type="text" name="a5" id="a5">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-lg-6">
-                    <p id="q6">6) Как расшифровать КВ?
-                    </p>
-                </div>
-                <div class="col-sm-12 col-lg-6">
-                    <input type="text" name="a6" id="a6">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-12 col-lg-6">
-                    <p id="q7">7) Кто такой "лис пустыни"?
-                    </p>
-                </div>
-                <div class="col-sm-12 col-lg-6">
-                    <input type="text" name="a7" id="a7">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-12 col-lg-6">
-                    <p id="q8">8) Сколько и в каком концлагере держали Степана Бандеру?
-                    </p>
-                </div>
-                <div class="col-sm-12 col-lg-6">
-                    <input type="text" name="a8" id="a8">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-12 col-lg-6">
-                    <p id="q9">9) Расшишровать SS?
-                    </p>
-                </div>
-
-                <div class="col-sm-12 col-lg-6">
-                    <input type="text" name="a9" id="a9">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-12 col-lg-6">
-                    <p id="q10">10) Масса танка Пантера?
-                    </p>
-                </div>
-
-                <div class="col-sm-12 col-lg-6">
-                    <input type="text" name="a10" id="a10">
-                </div>
-            </div>
-            <p></p>
+            </div> -->
+            <p id="addq"></p>
             <div class="row">
                 <input type="submit" class="btn_s btn btn-success">
             </div>
