--- a/history_quest/game.html
+++ b/history_quest/game.html
@@ -42,12 +42,35 @@
             </div> -->
             <p id="addq"></p>
             <div class="row">
-                <input type="submit" class="btn_s btn btn-success">
+                <input type="submit" class="btn_s btn btn-success" data-toggle="modal" data-target="#exampleModal">
             </div>
 
         </form>
     </div>
-
+    <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"> -->
+        <!-- Запустить модальное окно -->
+      <!-- </button> -->
+      
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Your result</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="window.location.reload(true);">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+            <p id="score-in-modal">Your score: </p>    
+            </div>
+            <div class="modal-footer">
+              <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+              <button type="button" class="btn btn-primary" onclick="window.location.reload(true);">Restart</button>
+            </div>
+          </div>
+        </div>
+      </div>
 </body>
 
 </html>
