--- a/history_quest/game.html
+++ b/history_quest/game.html
@@ -52,12 +52,12 @@
       <!-- </button> -->
       
       <!-- Modal -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" onclick="window.location.reload(true);" >
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="exampleModalLabel">Your result</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="window.location.reload(true);">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close" >
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
